--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
+}
+body {
+  @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Navbar */
+
+.navbar-bg {
+  background-image: url(./Image/banner-bg.png);
+  background-size: cover;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* Hero */
+
+.hero-bg {
+  background-image: url(./Image/banner-bg.png);
+  background-size: cover;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/* Custumer */
+
+.custumer-box {
+  box-shadow: 0px 0px 71px 55px rgba(255, 255, 255, 0.75);
 }
 
-.App-link {
-  color: #61dafb;
+/* Our Service */
+
+.service-bg {
+  background-image: url(./Image/service-bg.png);
+  background-size: cover;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.service-box {
+  transition: all 1s;
+}
+.service-box:hover {
+  box-shadow: 0px 0px 49px 11px rgba(0, 0, 0, 0.75);
+  background-color: white;
+}
+
+/* About */
+
+.about-bg {
+  background-image: url(./Image/about-bg.png);
+  background-size: cover;
+}
+
+/* Contact */
+
+.contact-bg {
+  background-image: url(./Image/service-bg.png);
+  background-size: cover;
+}
+
+/* Blogs */
+
+.blogs-bg {
+  background-image: url(./Image/service-bg.png);
+  background-size: cover;
 }
